--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,38 @@
-node_modules
-dist
+# Node.js ve TypeScript
+node_modules/
+dist/
 .DS_Store
-server/public
 vite.config.ts.*
 *.tar.gz
+
+# Build çıktıları
+build/
+server/public/
+
+# Ortam dosyaları (şifreler ve API anahtarları içerir)
+.env
+.env.local
+.env.*.local
+
+# Log ve cache dosyaları
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+.cache/
+.tmp/
+
+# OS dosyaları
+Thumbs.db
+.idea/
+.vscode/
+
+# Veritabanı dosyaları (isteğe bağlı)
+# Eğer veritabanını GitHub'a yüklemek istiyorsan bu satırları YORUM SATIRI yap.
+# *.db
+# *.sqlite
+# *.sqlite3
+
+# Test coverage
+coverage/
