--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,23 +1,65 @@
 {
-  "name": "mobile",
+  "name": "2mins-mobile",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android": "eas build --platform android",
+    "build:ios": "eas build --platform ios",
+    "build:all": "eas build --platform all"
   },
   "dependencies": {
-    "expo": "~54.0.25",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-safe-area-context": "^5.6.2"
+    "@expo-google-fonts/dm-sans": "^0.2.3",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/metro-runtime": "~4.0.1",
+    "@expo/vector-icons": "^14.0.4",
+    "@hookform/resolvers": "^3.10.0",
+    "@react-native-async-storage/async-storage": "~2.1.0",
+    "@react-navigation/bottom-tabs": "^7.2.2",
+    "@react-navigation/drawer": "^7.2.1",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.2.2",
+    "@tanstack/react-query": "^5.60.5",
+    "date-fns": "^3.6.0",
+    "expo": "~52.0.0",
+    "expo-asset": "~11.0.1",
+    "expo-camera": "~16.0.12",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.4",
+    "expo-notifications": "~0.32.13",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "2.0.1",
+    "nativewind": "^2.0.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.55.0",
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.4.0",
+    "react-native-web": "0.19.13",
+    "react-native-worklets": "^0.6.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "@babel/core": "^7.25.0",
+    "@expo/ngrok": "^4.1.0",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
+    "tailwindcss": "3.4.17",
+    "typescript": "~5.6.0"
   },
-  "private": true
+  "private": true,
+  "description": "## 📱 Genel Bakış / Overview",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
